--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ dist-ssr
 .env.development.local
 .env.production.local
 .env.local
-
+.env.development
+.env.production
+.env
 # 但保留示例文件
 !.env.example
 
