--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "vue3_cli_default",
+  "name": "traffic-iot-system",
+  "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
+    "axios": "^1.6.2",
+    "element-plus": "^2.4.4",
+    "@element-plus/icons-vue": "^2.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/compiler-sfc": "^3.5.24",
-    "vite": "^7.2.2"
+    "@vitejs/plugin-vue": "^4.4.0",
+    "vite": "^5.0.0",
+    "sass": "^1.69.5"
   }
 }
